--- a/note_Srinath_C0741052/note_Srinath_C0741052/Base.lproj/Main.storyboard
+++ b/note_Srinath_C0741052/note_Srinath_C0741052/Base.lproj/Main.storyboard
@@ -47,10 +47,49 @@
                     <view key="view" contentMode="scaleToFill" id="QbV-Nx-Ych">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Fmj-2A-8Yh">
+                                <rect key="frame" x="20" y="35" width="374" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="MME-Ec-0Z8"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Vxm-Oi-Zi0">
+                                <rect key="frame" x="20" y="100" width="374" height="300"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="300" id="W3c-Ci-t8r"/>
+                                </constraints>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="44f-LI-KXA">
+                                <rect key="frame" x="174.5" y="420" width="65" height="30"/>
+                                <state key="normal" title="Add Note"/>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="44f-LI-KXA" firstAttribute="top" secondItem="Vxm-Oi-Zi0" secondAttribute="bottom" constant="20" id="Xpx-jV-5E9"/>
+                            <constraint firstItem="44f-LI-KXA" firstAttribute="centerX" secondItem="QbV-Nx-Ych" secondAttribute="centerX" id="Z3N-VZ-zwE"/>
+                            <constraint firstItem="Vxm-Oi-Zi0" firstAttribute="leading" secondItem="K1A-YU-kWA" secondAttribute="leading" constant="20" id="bDK-Fe-nd7"/>
+                            <constraint firstItem="K1A-YU-kWA" firstAttribute="trailing" secondItem="Fmj-2A-8Yh" secondAttribute="trailing" constant="20" id="hYG-wy-ynP"/>
+                            <constraint firstItem="Fmj-2A-8Yh" firstAttribute="top" secondItem="K1A-YU-kWA" secondAttribute="top" constant="35" id="igg-vc-UIX"/>
+                            <constraint firstItem="K1A-YU-kWA" firstAttribute="trailing" secondItem="Vxm-Oi-Zi0" secondAttribute="trailing" constant="20" id="rRh-7R-6Jh"/>
+                            <constraint firstItem="Vxm-Oi-Zi0" firstAttribute="top" secondItem="Fmj-2A-8Yh" secondAttribute="bottom" constant="20" id="ujX-V0-r6i"/>
+                            <constraint firstItem="Fmj-2A-8Yh" firstAttribute="leading" secondItem="K1A-YU-kWA" secondAttribute="leading" constant="20" id="uyV-HB-mgf"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="K1A-YU-kWA"/>
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
+                    <connections>
+                        <outlet property="descriptionTextView" destination="Vxm-Oi-Zi0" id="9bb-zk-aUE"/>
+                        <outlet property="titleTextField" destination="Fmj-2A-8Yh" id="jUU-R0-VGq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ywp-we-fFc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
