Added note search

--- a/note_Srinath_C0741052/note_Srinath_C0741052/Base.lproj/Main.storyboard
+++ b/note_Srinath_C0741052/note_Srinath_C0741052/Base.lproj/Main.storyboard
@@ -31,12 +31,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="glV-iA-QpW">
+                            <searchBar contentMode="redraw" placeholder="Search note" translatesAutoresizingMaskIntoConstraints="NO" id="glV-iA-QpW">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="Hde-Zc-4ye"/>
                                 </constraints>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="cic-ZQ-DDc" id="eq2-mJ-7I7"/>
+                                </connections>
                             </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="SPv-SW-nra">
                                 <rect key="frame" x="0.0" y="44" width="414" height="730"/>
