--- a/note_Srinath_C0741052/note_Srinath_C0741052/Base.lproj/Main.storyboard
+++ b/note_Srinath_C0741052/note_Srinath_C0741052/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="cic-ZQ-DDc" kind="relationship" relationship="rootViewController" id="D2i-dT-Qlb"/>
+                        <segue destination="5Bj-3u-Kfk" kind="relationship" relationship="rootViewController" id="qF3-Hl-Sh2"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dqm-6a-B8U" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -26,7 +26,7 @@
         <!--Notes List View Controller-->
         <scene sceneID="suB-xy-ubW">
             <objects>
-                <viewController id="cic-ZQ-DDc" customClass="NotesListViewController" customModule="note_Srinath_C0741052" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="NotesListViewController" id="cic-ZQ-DDc" customClass="NotesListViewController" customModule="note_Srinath_C0741052" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="2vh-kv-Bcl">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -70,7 +70,35 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7eZ-Di-ZVa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="98.550724637681171" y="-214.28571428571428"/>
+            <point key="canvasLocation" x="736" y="-208"/>
+        </scene>
+        <!--Categories View Controller-->
+        <scene sceneID="kjI-4f-QqL">
+            <objects>
+                <viewController storyboardIdentifier="CategoriesViewController" id="5Bj-3u-Kfk" customClass="CategoriesViewController" customModule="note_Srinath_C0741052" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="yED-HA-R7d">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="QPq-Rp-k21">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="qSw-IK-evA" firstAttribute="trailing" secondItem="QPq-Rp-k21" secondAttribute="trailing" id="BJb-B3-XOC"/>
+                            <constraint firstItem="QPq-Rp-k21" firstAttribute="leading" secondItem="qSw-IK-evA" secondAttribute="leading" id="Y5k-B3-YNW"/>
+                            <constraint firstItem="QPq-Rp-k21" firstAttribute="top" secondItem="qSw-IK-evA" secondAttribute="top" id="Yvl-mS-Wbl"/>
+                            <constraint firstItem="qSw-IK-evA" firstAttribute="bottom" secondItem="QPq-Rp-k21" secondAttribute="bottom" id="djg-vE-Fma"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="qSw-IK-evA"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Tib-go-dS3"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aou-cb-3kg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="71" y="-208"/>
         </scene>
         <!--Note Details View Controller-->
         <scene sceneID="znL-rB-Zw1">
@@ -152,7 +180,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ywp-we-fFc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="779" y="-217"/>
+            <point key="canvasLocation" x="1394" y="-208"/>
         </scene>
         <!--Map View Controller-->
         <scene sceneID="K22-ki-XfE">
@@ -185,7 +213,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PVG-qX-Hn5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1479" y="-213"/>
+            <point key="canvasLocation" x="2039" y="-208"/>
         </scene>
     </scenes>
 </document>
