--- a/note_Srinath_C0741052/note_Srinath_C0741052/Base.lproj/Main.storyboard
+++ b/note_Srinath_C0741052/note_Srinath_C0741052/Base.lproj/Main.storyboard
@@ -7,6 +7,40 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Category Detail View Controller-->
+        <scene sceneID="NyQ-y2-w7a">
+            <objects>
+                <viewController id="cMd-RV-KEd" customClass="CategoryDetailViewController" customModule="note_Srinath_C0741052" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="R3Z-GZ-ZEe">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Please enter category title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="500-wh-ibx">
+                                <rect key="frame" x="20" y="30" width="374" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="l85-XP-4iO"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="500-wh-ibx" firstAttribute="leading" secondItem="qcS-qe-7eZ" secondAttribute="leading" constant="20" id="a37-qU-NmW"/>
+                            <constraint firstItem="qcS-qe-7eZ" firstAttribute="trailing" secondItem="500-wh-ibx" secondAttribute="trailing" constant="20" id="dxv-5H-y5O"/>
+                            <constraint firstItem="500-wh-ibx" firstAttribute="top" secondItem="qcS-qe-7eZ" secondAttribute="top" constant="30" id="lpu-vd-TFm"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="qcS-qe-7eZ"/>
+                    </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
+                    <connections>
+                        <outlet property="titleTextField" destination="500-wh-ibx" id="CoI-zq-cxN"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HfZ-fF-tFs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1107" y="-805"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="9ne-6U-LQz">
             <objects>
