--- a/note_Srinath_C0741052/note_Srinath_C0741052/Base.lproj/Main.storyboard
+++ b/note_Srinath_C0741052/note_Srinath_C0741052/Base.lproj/Main.storyboard
@@ -150,7 +150,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Note Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Fmj-2A-8Yh">
-                                <rect key="frame" x="20" y="35" width="374" height="45"/>
+                                <rect key="frame" x="20" y="80" width="374" height="45"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="45" id="MME-Ec-0Z8"/>
                                 </constraints>
@@ -158,7 +158,7 @@
                                 <textInputTraits key="textInputTraits" returnKeyType="done"/>
                             </textField>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Vxm-Oi-Zi0">
-                                <rect key="frame" x="20" y="100" width="374" height="150"/>
+                                <rect key="frame" x="20" y="145" width="374" height="150"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="150" id="W3c-Ci-t8r"/>
@@ -168,14 +168,14 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="44f-LI-KXA">
-                                <rect key="frame" x="174.5" y="477" width="65" height="30"/>
+                                <rect key="frame" x="174.5" y="522" width="65" height="30"/>
                                 <state key="normal" title="Add Note"/>
                                 <connections>
                                     <action selector="addButtonTapped:" destination="M3q-cq-qgQ" eventType="touchUpInside" id="cSr-s6-Mtj"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fNz-j7-qfi">
-                                <rect key="frame" x="20" y="280" width="150" height="150"/>
+                                <rect key="frame" x="20" y="325" width="150" height="150"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="9QP-yC-gRC"/>
                                     <constraint firstAttribute="height" constant="150" id="Ugz-Eh-lNS"/>
@@ -186,12 +186,22 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZKH-Ts-NCx">
-                                <rect key="frame" x="244" y="280" width="150" height="150"/>
+                                <rect key="frame" x="244" y="325" width="150" height="150"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="C9B-F1-s99"/>
                                     <constraint firstAttribute="height" constant="150" id="sf7-ly-7eI"/>
                                 </constraints>
                                 <state key="normal" title="Record Audio"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Dl-bi-j1F">
+                                <rect key="frame" x="20" y="20" width="374" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="3Kn-QC-Wpc"/>
+                                </constraints>
+                                <state key="normal" title="Select Category"/>
+                                <connections>
+                                    <action selector="selectCategoryTapped" destination="M3q-cq-qgQ" eventType="touchUpInside" id="aDV-je-W4Z"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -200,14 +210,17 @@
                             <constraint firstItem="44f-LI-KXA" firstAttribute="top" secondItem="fNz-j7-qfi" secondAttribute="bottom" constant="47" id="3QE-me-Tpy"/>
                             <constraint firstItem="ZKH-Ts-NCx" firstAttribute="top" secondItem="Vxm-Oi-Zi0" secondAttribute="bottom" constant="30" id="5RK-WE-rOR"/>
                             <constraint firstItem="fNz-j7-qfi" firstAttribute="top" secondItem="Vxm-Oi-Zi0" secondAttribute="bottom" constant="30" id="HYr-On-rRa"/>
+                            <constraint firstItem="4Dl-bi-j1F" firstAttribute="leading" secondItem="K1A-YU-kWA" secondAttribute="leading" constant="20" id="U30-FS-9Wh"/>
                             <constraint firstItem="fNz-j7-qfi" firstAttribute="leading" secondItem="K1A-YU-kWA" secondAttribute="leading" constant="20" id="YFG-b5-8qF"/>
                             <constraint firstItem="44f-LI-KXA" firstAttribute="centerX" secondItem="QbV-Nx-Ych" secondAttribute="centerX" id="Z3N-VZ-zwE"/>
                             <constraint firstItem="Vxm-Oi-Zi0" firstAttribute="leading" secondItem="K1A-YU-kWA" secondAttribute="leading" constant="20" id="bDK-Fe-nd7"/>
                             <constraint firstItem="K1A-YU-kWA" firstAttribute="trailing" secondItem="Fmj-2A-8Yh" secondAttribute="trailing" constant="20" id="hYG-wy-ynP"/>
-                            <constraint firstItem="Fmj-2A-8Yh" firstAttribute="top" secondItem="K1A-YU-kWA" secondAttribute="top" constant="35" id="igg-vc-UIX"/>
+                            <constraint firstItem="Fmj-2A-8Yh" firstAttribute="top" secondItem="K1A-YU-kWA" secondAttribute="top" constant="80" id="igg-vc-UIX"/>
                             <constraint firstItem="K1A-YU-kWA" firstAttribute="trailing" secondItem="Vxm-Oi-Zi0" secondAttribute="trailing" constant="20" id="rRh-7R-6Jh"/>
                             <constraint firstItem="Vxm-Oi-Zi0" firstAttribute="top" secondItem="Fmj-2A-8Yh" secondAttribute="bottom" constant="20" id="ujX-V0-r6i"/>
                             <constraint firstItem="Fmj-2A-8Yh" firstAttribute="leading" secondItem="K1A-YU-kWA" secondAttribute="leading" constant="20" id="uyV-HB-mgf"/>
+                            <constraint firstItem="Fmj-2A-8Yh" firstAttribute="top" secondItem="4Dl-bi-j1F" secondAttribute="bottom" constant="20" id="yal-md-mF6"/>
+                            <constraint firstItem="K1A-YU-kWA" firstAttribute="trailing" secondItem="4Dl-bi-j1F" secondAttribute="trailing" constant="20" id="yuX-bz-boL"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="K1A-YU-kWA"/>
                     </view>
@@ -216,6 +229,7 @@
                         <outlet property="descriptionTextView" destination="Vxm-Oi-Zi0" id="9bb-zk-aUE"/>
                         <outlet property="imageButton" destination="fNz-j7-qfi" id="fPS-wQ-Yjw"/>
                         <outlet property="recordButton" destination="ZKH-Ts-NCx" id="caT-02-qpK"/>
+                        <outlet property="selectCategoryButton" destination="4Dl-bi-j1F" id="e52-Pj-PKO"/>
                         <outlet property="titleTextField" destination="Fmj-2A-8Yh" id="jUU-R0-VGq"/>
                     </connections>
                 </viewController>
