--- a/note_Srinath_C0741052/note_Srinath_C0741052/Base.lproj/Main.storyboard
+++ b/note_Srinath_C0741052/note_Srinath_C0741052/Base.lproj/Main.storyboard
@@ -168,7 +168,7 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="44f-LI-KXA">
-                                <rect key="frame" x="174.5" y="522" width="65" height="30"/>
+                                <rect key="frame" x="174.5" y="535" width="65" height="30"/>
                                 <state key="normal" title="Add Note"/>
                                 <connections>
                                     <action selector="addButtonTapped:" destination="M3q-cq-qgQ" eventType="touchUpInside" id="cSr-s6-Mtj"/>
@@ -206,15 +206,22 @@
                                     <action selector="selectCategoryTapped" destination="M3q-cq-qgQ" eventType="touchUpInside" id="aDV-je-W4Z"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eBq-Lb-p2v">
+                                <rect key="frame" x="298" y="495" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="K1A-YU-kWA" firstAttribute="trailing" secondItem="ZKH-Ts-NCx" secondAttribute="trailing" constant="20" id="2l0-C6-T6y"/>
-                            <constraint firstItem="44f-LI-KXA" firstAttribute="top" secondItem="fNz-j7-qfi" secondAttribute="bottom" constant="47" id="3QE-me-Tpy"/>
+                            <constraint firstItem="44f-LI-KXA" firstAttribute="top" secondItem="fNz-j7-qfi" secondAttribute="bottom" constant="60" id="3QE-me-Tpy"/>
                             <constraint firstItem="ZKH-Ts-NCx" firstAttribute="top" secondItem="Vxm-Oi-Zi0" secondAttribute="bottom" constant="30" id="5RK-WE-rOR"/>
                             <constraint firstItem="fNz-j7-qfi" firstAttribute="top" secondItem="Vxm-Oi-Zi0" secondAttribute="bottom" constant="30" id="HYr-On-rRa"/>
                             <constraint firstItem="4Dl-bi-j1F" firstAttribute="leading" secondItem="K1A-YU-kWA" secondAttribute="leading" constant="20" id="U30-FS-9Wh"/>
                             <constraint firstItem="fNz-j7-qfi" firstAttribute="leading" secondItem="K1A-YU-kWA" secondAttribute="leading" constant="20" id="YFG-b5-8qF"/>
+                            <constraint firstItem="eBq-Lb-p2v" firstAttribute="top" secondItem="ZKH-Ts-NCx" secondAttribute="bottom" constant="20" id="YxC-nX-6HD"/>
                             <constraint firstItem="44f-LI-KXA" firstAttribute="centerX" secondItem="QbV-Nx-Ych" secondAttribute="centerX" id="Z3N-VZ-zwE"/>
                             <constraint firstItem="Vxm-Oi-Zi0" firstAttribute="leading" secondItem="K1A-YU-kWA" secondAttribute="leading" constant="20" id="bDK-Fe-nd7"/>
                             <constraint firstItem="K1A-YU-kWA" firstAttribute="trailing" secondItem="Fmj-2A-8Yh" secondAttribute="trailing" constant="20" id="hYG-wy-ynP"/>
@@ -224,6 +231,7 @@
                             <constraint firstItem="Fmj-2A-8Yh" firstAttribute="leading" secondItem="K1A-YU-kWA" secondAttribute="leading" constant="20" id="uyV-HB-mgf"/>
                             <constraint firstItem="Fmj-2A-8Yh" firstAttribute="top" secondItem="4Dl-bi-j1F" secondAttribute="bottom" constant="20" id="yal-md-mF6"/>
                             <constraint firstItem="K1A-YU-kWA" firstAttribute="trailing" secondItem="4Dl-bi-j1F" secondAttribute="trailing" constant="20" id="yuX-bz-boL"/>
+                            <constraint firstItem="eBq-Lb-p2v" firstAttribute="centerX" secondItem="ZKH-Ts-NCx" secondAttribute="centerX" id="zvu-V4-iLS"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="K1A-YU-kWA"/>
                     </view>
@@ -232,6 +240,7 @@
                         <outlet property="descriptionTextView" destination="Vxm-Oi-Zi0" id="9bb-zk-aUE"/>
                         <outlet property="imageButton" destination="fNz-j7-qfi" id="fPS-wQ-Yjw"/>
                         <outlet property="recordButton" destination="ZKH-Ts-NCx" id="caT-02-qpK"/>
+                        <outlet property="recordingTimeLabel" destination="eBq-Lb-p2v" id="jHF-rb-3wX"/>
                         <outlet property="selectCategoryButton" destination="4Dl-bi-j1F" id="e52-Pj-PKO"/>
                         <outlet property="titleTextField" destination="Fmj-2A-8Yh" id="jUU-R0-VGq"/>
                     </connections>
